<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>vega-util</groupId>
	<artifactId>vega-util</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<modules>
		<module>vega-json-util</module>
		<module>vega-json-util-fastjson</module>
		<module>vega-util-log</module>
		<module>vega-util-base</module>
		<module>vega-util-mq</module>
	</modules>

	<properties>
		<guava.version>18.0</guava.version>
		<logback.version>1.1.3</logback.version>
		<spring.version>4.1.6.RELEASE</spring.version>
		<spring.rabbit.version>1.4.4.RELEASE</spring.rabbit.version>
		<slf4j.version>1.7.12</slf4j.version>
		<mybatis.version>3.2.8</mybatis.version>
		<spring.mybatis.version>1.2.2</spring.mybatis.version>
		<mysql.version>5.1.35</mysql.version>
		<maven.resources.version>2.4.3</maven.resources.version>
		<maven.compiler.version>2.3.2</maven.compiler.version>
		<maven.surefire.version>2.7.2</maven.surefire.version>
		<maven-assembly.version>2.3</maven-assembly.version>
		<maven.plugsins.version>3.3.3</maven.plugsins.version>
		<java.version>1.7</java.version>
		<config.encoding>UTF-8</config.encoding>
		<spring.redis.version>1.5.0.RELEASE</spring.redis.version>
		<jedis.version>2.7.0</jedis.version>
		<spring.web.version>3.2.0.RELEASE</spring.web.version>
		<activemq.version>5.7.0</activemq.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-tx</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.amqp</groupId>
				<artifactId>spring-rabbit</artifactId>
				<version>${spring.rabbit.version}</version>
				<exclusions>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis</artifactId>
				<version>${mybatis.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis-spring</artifactId>
				<version>${spring.mybatis.version}</version>
			</dependency>
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>${mysql.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-plugin-api</artifactId>
				<version>${maven.plugsins.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.data</groupId>
				<artifactId>spring-data-redis</artifactId>
				<version>${spring.redis.version}</version>
			</dependency>
			<dependency>
				<groupId>redis.clients</groupId>
				<artifactId>jedis</artifactId>
				<version>${jedis.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.activemq</groupId>
				<artifactId>activemq-core</artifactId>
				<version>${activemq.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.activemq</groupId>
				<artifactId>activemq-pool</artifactId>
				<version>${activemq.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven.compiler.version}</version>
					<configuration>
						<encoding>${config.encoding}</encoding>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=1024m
							-Dfile.encoding=UTF-8</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.10</version>
					<!-- <executions>
						<execution>
							<id>copy-dependencies</id>
							<phase>package</phase>
							<goals>
								<goal>copy-dependencies</goal>
							</goals>
							<configuration>
								configure the plugin here
							</configuration>
						</execution>
					</executions> -->
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>